[tool.poetry]
name = "download-media-telegram"
version = "0.1.0"
description = ""
authors = ["Paulo Rodrigues <prodrigues1912@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.16.2"
tqdm = "^4.48.2"
hachoir = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
